--- a/Assets/_Root/package.json
+++ b/Assets/_Root/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "com.demo.packagename",
-  "displayName": "Package Name",
-  "description": "Package Description",
+  "name": "com.pancake.heart",
+  "displayName": "Heart",
+  "description": "The heart of the world tree",
   "version": "1.0.0",
-  "unity": "2019.1",
-  "category": "pancake",
+  "unity": "2019.4",
+  "category": "core",
   "author": {
     "name": "yenmoc",
     "email": "phongsoyenmoc.diep@gmail.com",
@@ -16,8 +16,8 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:pancake-llc/packagename.git",
-    "directory": "Package Name"
+    "url": "git@github.com:pancake-llc/heart.git",
+    "directory": "Heart"
   },
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/@pancake-llc"
