--- a/Assets/_Root/pancake@heart.asmdef
+++ b/Assets/_Root/pancake@heart.asmdef
@@ -5,7 +5,8 @@
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
         "GUID:2bafac87e7f4b9b418d9448d219b01ab",
         "GUID:9e24947de15b9834991c9d8411ea37cf",
-        "GUID:84651a3751eca9349aac36a66bba901b"
+        "GUID:84651a3751eca9349aac36a66bba901b",
+        "GUID:723bc6dc8b4852f4cbbe5633c04725cd"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
