--- a/Assets/_Root/Editor/pancake@editor.asmdef
+++ b/Assets/_Root/Editor/pancake@editor.asmdef
@@ -6,7 +6,8 @@
         "GUID:9e24947de15b9834991c9d8411ea37cf",
         "GUID:84651a3751eca9349aac36a66bba901b",
         "GUID:69448af7b92c7f342b298e06a37122aa",
-        "GUID:723bc6dc8b4852f4cbbe5633c04725cd"
+        "GUID:723bc6dc8b4852f4cbbe5633c04725cd",
+        "GUID:6055be8ebefd69e48b49212b09b47b2f"
     ],
     "includePlatforms": [
         "Editor"
@@ -17,6 +18,12 @@
     "precompiledReferences": [],
     "autoReferenced": true,
     "defineConstraints": [],
-    "versionDefines": [],
+    "versionDefines": [
+        {
+            "name": "com.unity.addressables",
+            "expression": "",
+            "define": "PANCAKE_ADDRESSABLE_SUPPORT"
+        }
+    ],
     "noEngineReferences": false
 }
