--- a/Assets/_Root/Editor/pancake@editor.asmdef
+++ b/Assets/_Root/Editor/pancake@editor.asmdef
@@ -23,6 +23,11 @@
             "name": "com.unity.addressables",
             "expression": "",
             "define": "PANCAKE_ADDRESSABLE_SUPPORT"
+        },
+        {
+            "name": "com.system-community.systemruntimecompilerservicesunsafe",
+            "expression": "4.5.3",
+            "define": "PANCAKE_RUNTIME_UNSAFE"
         }
     ],
     "noEngineReferences": false
