--- a/Assets/_Root/Editor/Console/pancake@console.asmdef
+++ b/Assets/_Root/Editor/Console/pancake@console.asmdef
@@ -1,6 +1,6 @@
 {
-    "name": "Needle.Console.Editor",
-    "rootNamespace": "Needle.Console",
+    "name": "pancake@console",
+    "rootNamespace": "Pancake.Console",
     "references": [],
     "includePlatforms": [
         "Editor"
