--- a/Assets/_Root/Editor/Console/CustomConsole/needle.Demystify.Console.asmdef
+++ b/Assets/_Root/Editor/Console/CustomConsole/needle.Demystify.Console.asmdef
@@ -2,7 +2,8 @@
     "name": "Unity.InternalAPIEngineBridgeDev.001",
     "rootNamespace": "",
     "references": [
-        "GUID:c3a49cff5f11deb4785c3ec837d72af2"
+        "GUID:c3a49cff5f11deb4785c3ec837d72af2",
+        "GUID:96c821a642a1d6b46820749c150c5a13"
     ],
     "includePlatforms": [
         "Editor"
