*update path create archive setting

--- a/Assets/_Root/Editor/Profiling/pancake@profiling.asmdef
+++ b/Assets/_Root/Editor/Profiling/pancake@profiling.asmdef
@@ -1,6 +1,6 @@
 {
-    "name": "Needle.SelectiveProfiling",
-    "rootNamespace": "Needle.SelectiveProfiling",
+    "name": "pancake@profiling",
+    "rootNamespace": "Pancake.SelectiveProfiling",
     "references": [],
     "includePlatforms": [
         "Editor"
