--- a/Assets/_Root/package.json
+++ b/Assets/_Root/package.json
@@ -14,7 +14,8 @@
   "keywords": [ "unity" ],
   "dependencies": {
     "com.unity.addressables": "1.19.19",
-    "com.unity.inputsystem": "1.4.2"
+    "com.unity.inputsystem": "1.4.2",
+    "com.unity.nuget.newtonsoft-json": "3.0.2"
   },
   "repository": {
     "type": "git",
