--- a/Assets/_Root/Runtime/pancake@heart.asmdef
+++ b/Assets/_Root/Runtime/pancake@heart.asmdef
@@ -8,7 +8,8 @@
         "GUID:84651a3751eca9349aac36a66bba901b",
         "GUID:723bc6dc8b4852f4cbbe5633c04725cd",
         "GUID:17c644692427a4965be181afd82b3a89",
-        "GUID:76ccd20425a997e4fa7d12750eb80eb1"
+        "GUID:76ccd20425a997e4fa7d12750eb80eb1",
+        "GUID:bbde805d927e795439d7a746d1749cab"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
