--- a/Assets/_Root/Runtime/pancake@heart.asmdef
+++ b/Assets/_Root/Runtime/pancake@heart.asmdef
@@ -9,7 +9,9 @@
         "GUID:723bc6dc8b4852f4cbbe5633c04725cd",
         "GUID:17c644692427a4965be181afd82b3a89",
         "GUID:76ccd20425a997e4fa7d12750eb80eb1",
-        "GUID:bbde805d927e795439d7a746d1749cab"
+        "GUID:bbde805d927e795439d7a746d1749cab",
+        "GUID:ac145e6b8c6034cdbadc8c6e26aedbcf",
+        "GUID:1e8e55397bd004beaba78a667566665f"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
