--- a/Assets/_Root/package.json
+++ b/Assets/_Root/package.json
@@ -16,7 +16,8 @@
     "com.unity.addressables": "1.19.19",
     "com.unity.inputsystem": "1.4.2",
     "com.unity.nuget.newtonsoft-json": "3.0.2",
-    "com.unity.mobile.notifications": "2.0.2"
+    "com.unity.mobile.notifications": "2.0.2",
+    "com.unity.2d.sprite": "1.0.0"
   },
   "repository": {
     "type": "git",
