--- a/Assets/_Root/Runtime/pancake@heart.asmdef
+++ b/Assets/_Root/Runtime/pancake@heart.asmdef
@@ -65,6 +65,11 @@
             "name": "com.unity.addressables",
             "expression": "",
             "define": "PANCAKE_ADDRESSABLE_SUPPORT"
+        },
+        {
+            "name": "com.pancake.facebook",
+            "expression": "",
+            "define": "PANCAKE_FACEBOOK_SUPPORT"
         }
     ],
     "noEngineReferences": false
