*add playfab game service api

--- a/Assets/_Root/Runtime/pancake@heart.asmdef
+++ b/Assets/_Root/Runtime/pancake@heart.asmdef
@@ -11,7 +11,8 @@
         "GUID:76ccd20425a997e4fa7d12750eb80eb1",
         "GUID:bbde805d927e795439d7a746d1749cab",
         "GUID:ac145e6b8c6034cdbadc8c6e26aedbcf",
-        "GUID:1e8e55397bd004beaba78a667566665f"
+        "GUID:1e8e55397bd004beaba78a667566665f",
+        "GUID:0da6d172d18a54e4389d0dce1e1ffdf2"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
