--- a/Runtime/Atoms/InputSystem/Editor/UnityAtoms.UnityAtomsInputSystem.Editor.asmdef
+++ b/Runtime/Atoms/InputSystem/Editor/UnityAtoms.UnityAtomsInputSystem.Editor.asmdef
@@ -19,6 +19,12 @@
     "precompiledReferences": [],
     "autoReferenced": true,
     "defineConstraints": [],
-    "versionDefines": [],
+    "versionDefines": [
+        {
+            "name": "com.unity.inputsystem",
+            "expression": "",
+            "define": "PANCAKE_INPUTSYSTEM"
+        }
+    ],
     "noEngineReferences": false
 }
