--- a/Runtime/pancake@heart.asmdef
+++ b/Runtime/pancake@heart.asmdef
@@ -18,7 +18,8 @@
         "GUID:00c479e63b1c74419820a39073267645",
         "GUID:a4cfc1a18fa3a469b96d885db522f42e",
         "GUID:f889b4ab8c0b04d409f2bbd996249a4e",
-        "GUID:73cfe616a226dd64690d08b6164cb0e2"
+        "GUID:73cfe616a226dd64690d08b6164cb0e2",
+        "GUID:e2146bdc04d424169b039613a1b62bdf"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
