--- a/Runtime/pancake@heart.asmdef
+++ b/Runtime/pancake@heart.asmdef
@@ -19,7 +19,8 @@
         "GUID:a4cfc1a18fa3a469b96d885db522f42e",
         "GUID:f889b4ab8c0b04d409f2bbd996249a4e",
         "GUID:73cfe616a226dd64690d08b6164cb0e2",
-        "GUID:e2146bdc04d424169b039613a1b62bdf"
+        "GUID:e2146bdc04d424169b039613a1b62bdf",
+        "GUID:c60dd9e039c44fbd0941a8f71b9faccd"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
