*add method SwitchToAndroidActivityNoOpenAd for  ignore app open ad when show in-app-rating

--- a/Runtime/pancake@heart.asmdef
+++ b/Runtime/pancake@heart.asmdef
@@ -100,6 +100,11 @@
             "name": "com.google.firebase.analytics",
             "expression": "",
             "define": "PANCAKE_ANALYTIC"
+        },
+        {
+            "name": "com.google.play.review",
+            "expression": "1.6.0",
+            "define": "PANCAKE_INAPPREVIEW"
         }
     ],
     "noEngineReferences": false
