*local validation iap

--- a/Runtime/pancake@heart.asmdef
+++ b/Runtime/pancake@heart.asmdef
@@ -21,7 +21,9 @@
         "GUID:73cfe616a226dd64690d08b6164cb0e2",
         "GUID:e2146bdc04d424169b039613a1b62bdf",
         "GUID:c60dd9e039c44fbd0941a8f71b9faccd",
-        "GUID:75469ad4d38634e559750d17036d5f7c"
+        "GUID:75469ad4d38634e559750d17036d5f7c",
+        "GUID:d0bf1e9f644394e1de13e6ae02458b07",
+        "GUID:e63a64384cc3ef04cac761c1ce76e9c2"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
