*fix obfuscate iap

--- a/Runtime/pancake@heart.asmdef
+++ b/Runtime/pancake@heart.asmdef
@@ -23,7 +23,9 @@
         "GUID:c60dd9e039c44fbd0941a8f71b9faccd",
         "GUID:75469ad4d38634e559750d17036d5f7c",
         "GUID:d0bf1e9f644394e1de13e6ae02458b07",
-        "GUID:e63a64384cc3ef04cac761c1ce76e9c2"
+        "GUID:e63a64384cc3ef04cac761c1ce76e9c2",
+        "GUID:94e1de2458b07d0bf1e9f13e6ae06443",
+        "GUID:64558922946e126408dfcf889cd7b890"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
