--- a/package.json
+++ b/package.json
@@ -15,10 +15,7 @@
   "dependencies": {
     "com.unity.addressables": "1.19.19",
     "com.unity.nuget.newtonsoft-json": "3.0.2",
-    "com.unity.mobile.notifications": "2.1.0",
-    "com.unity.2d.sprite": "1.0.0",
-    "com.unity.sharp-zip-lib": "1.3.3-preview",
-    "com.unity.ads.ios-support": "1.2.0"
+    "com.unity.2d.sprite": "1.0.0"
   },
   "repository": {
     "type": "git",
