--- a/Runtime/pancake@heart.asmdef
+++ b/Runtime/pancake@heart.asmdef
@@ -25,7 +25,8 @@
         "GUID:d0bf1e9f644394e1de13e6ae02458b07",
         "GUID:e63a64384cc3ef04cac761c1ce76e9c2",
         "GUID:94e1de2458b07d0bf1e9f13e6ae06443",
-        "GUID:64558922946e126408dfcf889cd7b890"
+        "GUID:64558922946e126408dfcf889cd7b890",
+        "GUID:69448af7b92c7f342b298e06a37122aa"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
