--- a/Runtime/pancake@heart.asmdef
+++ b/Runtime/pancake@heart.asmdef
@@ -27,7 +27,9 @@
         "GUID:94e1de2458b07d0bf1e9f13e6ae06443",
         "GUID:64558922946e126408dfcf889cd7b890",
         "GUID:69448af7b92c7f342b298e06a37122aa",
-        "GUID:f06555f75b070af458a003d92f9efb00"
+        "GUID:f06555f75b070af458a003d92f9efb00",
+        "GUID:fe25561d224ed4743af4c60938a59d0b",
+        "GUID:70ea675efa2644cef98c7ece24158333"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
