--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "com.pancake.heart",
   "displayName": "Heart",
   "description": "The heart of the world tree",
-  "version": "1.3.5",
+  "version": "2.0.0-pre",
   "unity": "2021.3",
   "category": "core",
   "author": {
