--- a/Modules/Scriptable/Runtime/pancake@scriptable.asmdef
+++ b/Modules/Scriptable/Runtime/pancake@scriptable.asmdef
@@ -2,7 +2,8 @@
     "name": "pancake@scriptable",
     "rootNamespace": "",
     "references": [
-        "GUID:adac8d59ad7e8504f82d387cded797a7"
+        "GUID:adac8d59ad7e8504f82d387cded797a7",
+        "GUID:6055be8ebefd69e48b49212b09b47b2f"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
@@ -11,6 +12,12 @@
     "precompiledReferences": [],
     "autoReferenced": true,
     "defineConstraints": [],
-    "versionDefines": [],
+    "versionDefines": [
+        {
+            "name": "com.unity.textmeshpro",
+            "expression": "2.0.0",
+            "define": "PANCAKE_TMP"
+        }
+    ],
     "noEngineReferences": false
 }
