--- a/Modules/Scriptable/Editor/pancake@scriptable.editor.asmdef
+++ b/Modules/Scriptable/Editor/pancake@scriptable.editor.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "",
     "references": [
         "GUID:b0a110e2f808b4d4d82f5694f91b251a",
-        "GUID:d43f774d56c534e4b84fe18247432afb"
+        "GUID:d43f774d56c534e4b84fe18247432afb",
+        "GUID:adac8d59ad7e8504f82d387cded797a7"
     ],
     "includePlatforms": [
         "Editor"
