-add: in-app-purchase

--- a/Editor/pancake@editor.asmdef
+++ b/Editor/pancake@editor.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "GUID:a824ce4dde854994ab15209834381e6f",
         "GUID:087e107ac31b88743919d55b204ac023",
-        "GUID:adac8d59ad7e8504f82d387cded797a7"
+        "GUID:adac8d59ad7e8504f82d387cded797a7",
+        "GUID:1fc40a42fd9ba86428b9f1a1bc03d8a6"
     ],
     "includePlatforms": [
         "Editor"
@@ -15,6 +16,12 @@
     "precompiledReferences": [],
     "autoReferenced": true,
     "defineConstraints": [],
-    "versionDefines": [],
+    "versionDefines": [
+        {
+            "name": "com.unity.purchasing",
+            "expression": "",
+            "define": "PANCAKE_IAP"
+        }
+    ],
     "noEngineReferences": false
 }
