-fix: bug fix auto load ad

--- a/Modules/Advertising/Editor/pancake@monetization.editor.asmdef
+++ b/Modules/Advertising/Editor/pancake@monetization.editor.asmdef
@@ -9,7 +9,9 @@
         "GUID:a4cfc1a18fa3a469b96d885db522f42e",
         "GUID:a10a05a8449c42519fd80f2b8b580de3"
     ],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": true,
