--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   ],
   "dependencies": {
     "com.unity.nuget.newtonsoft-json": "3.1.0",
-    "com.unity.2d.sprite": "1.0.0"
+    "com.unity.2d.sprite": "1.0.0",
+    "com.unity.burst": "1.8.3",
+    "com.unity.collections": "1.4.0"
   },
   "repository": {
     "type": "git",
