-update: tween wizard

--- a/Editor/pancake@editor.asmdef
+++ b/Editor/pancake@editor.asmdef
@@ -6,7 +6,8 @@
         "GUID:087e107ac31b88743919d55b204ac023",
         "GUID:adac8d59ad7e8504f82d387cded797a7",
         "GUID:1fc40a42fd9ba86428b9f1a1bc03d8a6",
-        "GUID:38036840b8620d443a0acf3e48f20d6f"
+        "GUID:38036840b8620d443a0acf3e48f20d6f",
+        "GUID:10507a3c16a6d88428b6e2a636fb7438"
     ],
     "includePlatforms": [
         "Editor"
