-add: install adjust and firebase in wizard

--- a/Editor/pancake@editor.asmdef
+++ b/Editor/pancake@editor.asmdef
@@ -33,6 +33,31 @@
             "name": "com.pancake.adjust",
             "expression": "4.33.0",
             "define": "PANCAKE_ADJUST"
+        },
+        {
+            "name": "com.google.firebase.analytics",
+            "expression": "8.1.0",
+            "define": "PANCAKE_FIREBASE_ANALYTIC"
+        },
+        {
+            "name": "com.google.firebase.remote-config",
+            "expression": "8.1.0",
+            "define": "PANCAKE_FIREBASE_REMOTECONFIG"
+        },
+        {
+            "name": "com.google.firebase.messaging",
+            "expression": "8.1.0",
+            "define": "PANCAKE_FIREBASE_MESSAGING"
+        },
+        {
+            "name": "com.google.firebase.crashlytics",
+            "expression": "8.1.0",
+            "define": "PANCAKE_FIREBASE_CRASHLYTIC"
+        },
+        {
+            "name": "com.google.external-dependency-manager",
+            "expression": "1.2.169",
+            "define": "PANCAKE_GOOGLE_EDM"
         }
     ],
     "noEngineReferences": false
