--- a/Modules/Advertising/Editor/Pancake.Monetization.Editor.asmdef
+++ b/Modules/Advertising/Editor/Pancake.Monetization.Editor.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "pancake@monetization.editor",
+    "name": "Pancake.Monetization.Editor",
     "rootNamespace": "",
     "references": [
         "GUID:d43f774d56c534e4b84fe18247432afb",
