--- a/Core/Pancake.Core.asmdef
+++ b/Core/Pancake.Core.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "pancake@core",
+    "name": "Pancake.Core",
     "rootNamespace": "",
     "references": [],
     "includePlatforms": [],
