--- a/Modules/IAP/Pancake.Purchase.asmdef
+++ b/Modules/IAP/Pancake.Purchase.asmdef
@@ -1,10 +1,13 @@
 {
-    "name": "pancake@runtime",
+    "name": "Pancake.Purchase",
     "rootNamespace": "",
     "references": [
-        "GUID:adac8d59ad7e8504f82d387cded797a7",
-        "GUID:38036840b8620d443a0acf3e48f20d6f",
-        "GUID:1fc40a42fd9ba86428b9f1a1bc03d8a6"
+        "GUID:60bfecf5cb232594891bc622f40d6bed",
+        "GUID:e63a64384cc3ef04cac761c1ce76e9c2",
+        "GUID:08d1c582746949b40ba6a45cdb776bdf",
+        "GUID:fe25561d224ed4743af4c60938a59d0b",
+        "GUID:70ea675efa2644cef98c7ece24158333",
+        "GUID:adac8d59ad7e8504f82d387cded797a7"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
@@ -12,7 +15,9 @@
     "overrideReferences": false,
     "precompiledReferences": [],
     "autoReferenced": true,
-    "defineConstraints": [],
+    "defineConstraints": [
+        "PANCAKE_IAP"
+    ],
     "versionDefines": [
         {
             "name": "com.unity.purchasing",
