--- a/Modules/Linq/Pancake.Linq.asmdef
+++ b/Modules/Linq/Pancake.Linq.asmdef
@@ -1,13 +1,8 @@
 {
-    "name": "pancake@ugui.editor",
+    "name": "Pancake.Linq",
     "rootNamespace": "",
-    "references": [
-        "GUID:71a2e5fd62742b447a45a06bf18f9a7d",
-        "GUID:d43f774d56c534e4b84fe18247432afb"
-    ],
-    "includePlatforms": [
-        "Editor"
-    ],
+    "references": [],
+    "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
