--- a/Modules/NewtonsoftUnityConverter/Pancake.Newtonsoft.Converter.asmdef
+++ b/Modules/NewtonsoftUnityConverter/Pancake.Newtonsoft.Converter.asmdef
@@ -1,22 +1,22 @@
 {
-    "name": "pancake@monetization",
+    "name": "Pancake.Newtonsoft.Converter",
     "rootNamespace": "",
-    "references": [
-        "GUID:adac8d59ad7e8504f82d387cded797a7",
-        "GUID:a4cfc1a18fa3a469b96d885db522f42e"
-    ],
+    "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": true,
     "precompiledReferences": [
-        "GoogleMobileAds.dll",
-        "GoogleMobileAds.Common.dll",
-        "GoogleMobileAds.Core.dll",
         "Newtonsoft.Json.dll"
     ],
     "autoReferenced": true,
     "defineConstraints": [],
-    "versionDefines": [],
+    "versionDefines": [
+        {
+            "name": "com.unity.addressables",
+            "expression": "",
+            "define": "PANCAKE_ADDRESSABLES"
+        }
+    ],
     "noEngineReferences": false
 }
