--- a/Modules/Scriptable/Editor/Pancake.Scriptable.Editor.asmdef
+++ b/Modules/Scriptable/Editor/Pancake.Scriptable.Editor.asmdef
@@ -1,13 +1,14 @@
 {
-    "name": "pancake@ugui",
+    "name": "Pancake.Scriptable.Editor",
     "rootNamespace": "",
     "references": [
-        "GUID:6055be8ebefd69e48b49212b09b47b2f",
-        "GUID:adac8d59ad7e8504f82d387cded797a7",
-        "GUID:10507a3c16a6d88428b6e2a636fb7438",
-        "GUID:663c42ebcf40ab347b24d56f39e89dc6"
+        "GUID:b0a110e2f808b4d4d82f5694f91b251a",
+        "GUID:d43f774d56c534e4b84fe18247432afb",
+        "GUID:adac8d59ad7e8504f82d387cded797a7"
     ],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
