--- a/Modules/Scriptable/Runtime/Pancake.Scriptable.asmdef
+++ b/Modules/Scriptable/Runtime/Pancake.Scriptable.asmdef
@@ -1,24 +1,22 @@
 {
-    "name": "pancake@tween",
+    "name": "Pancake.Scriptable",
     "rootNamespace": "",
     "references": [
         "GUID:adac8d59ad7e8504f82d387cded797a7",
-        "GUID:2665a8d13d1b3f18800f46e256720795",
-        "GUID:e0cd26848372d4e5c891c569017e11f1",
-        "GUID:d8b63aba1907145bea998dd612889d6b"
+        "GUID:6055be8ebefd69e48b49212b09b47b2f"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
-    "allowUnsafeCode": true,
+    "allowUnsafeCode": false,
     "overrideReferences": false,
     "precompiledReferences": [],
     "autoReferenced": true,
     "defineConstraints": [],
     "versionDefines": [
         {
-            "name": "com.unity.burst",
-            "expression": "",
-            "define": "ENABLE_BURST_AOT"
+            "name": "com.unity.textmeshpro",
+            "expression": "2.0.0",
+            "define": "PANCAKE_TMP"
         }
     ],
     "noEngineReferences": false
