--- a/Modules/Spring/Pancake.Spring.asmdef
+++ b/Modules/Spring/Pancake.Spring.asmdef
@@ -1,14 +1,10 @@
 {
-    "name": "pancake@scriptable.editor",
+    "name": "Pancake.Spring",
     "rootNamespace": "",
     "references": [
-        "GUID:b0a110e2f808b4d4d82f5694f91b251a",
-        "GUID:d43f774d56c534e4b84fe18247432afb",
         "GUID:adac8d59ad7e8504f82d387cded797a7"
     ],
-    "includePlatforms": [
-        "Editor"
-    ],
+    "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
