--- a/Modules/UGUI/Pancake.UGUI.asmdef
+++ b/Modules/UGUI/Pancake.UGUI.asmdef
@@ -1,9 +1,11 @@
 {
-    "name": "pancake@scriptable",
+    "name": "Pancake.UGUI",
     "rootNamespace": "",
     "references": [
+        "GUID:6055be8ebefd69e48b49212b09b47b2f",
         "GUID:adac8d59ad7e8504f82d387cded797a7",
-        "GUID:6055be8ebefd69e48b49212b09b47b2f"
+        "GUID:10507a3c16a6d88428b6e2a636fb7438",
+        "GUID:663c42ebcf40ab347b24d56f39e89dc6"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
@@ -12,12 +14,6 @@
     "precompiledReferences": [],
     "autoReferenced": true,
     "defineConstraints": [],
-    "versionDefines": [
-        {
-            "name": "com.unity.textmeshpro",
-            "expression": "2.0.0",
-            "define": "PANCAKE_TMP"
-        }
-    ],
+    "versionDefines": [],
     "noEngineReferences": false
 }
