--- a/Runtime/Pancake.Runtime.asmdef
+++ b/Runtime/Pancake.Runtime.asmdef
@@ -1,13 +1,10 @@
 {
-    "name": "pancake@purchase",
+    "name": "Pancake.Runtime",
     "rootNamespace": "",
     "references": [
-        "GUID:60bfecf5cb232594891bc622f40d6bed",
-        "GUID:e63a64384cc3ef04cac761c1ce76e9c2",
-        "GUID:08d1c582746949b40ba6a45cdb776bdf",
-        "GUID:fe25561d224ed4743af4c60938a59d0b",
-        "GUID:70ea675efa2644cef98c7ece24158333",
-        "GUID:adac8d59ad7e8504f82d387cded797a7"
+        "GUID:adac8d59ad7e8504f82d387cded797a7",
+        "GUID:38036840b8620d443a0acf3e48f20d6f",
+        "GUID:1fc40a42fd9ba86428b9f1a1bc03d8a6"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
@@ -15,9 +12,7 @@
     "overrideReferences": false,
     "precompiledReferences": [],
     "autoReferenced": true,
-    "defineConstraints": [
-        "PANCAKE_IAP"
-    ],
+    "defineConstraints": [],
     "versionDefines": [
         {
             "name": "com.unity.purchasing",
