--- a/Runtime/Pancake.Runtime.asmdef
+++ b/Runtime/Pancake.Runtime.asmdef
@@ -4,7 +4,9 @@
     "references": [
         "GUID:adac8d59ad7e8504f82d387cded797a7",
         "GUID:38036840b8620d443a0acf3e48f20d6f",
-        "GUID:1fc40a42fd9ba86428b9f1a1bc03d8a6"
+        "GUID:1fc40a42fd9ba86428b9f1a1bc03d8a6",
+        "GUID:f7dabdcbede30aa4d84803a163c2fa1b",
+        "GUID:00c479e63b1c74419820a39073267645"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
@@ -18,6 +20,11 @@
             "name": "com.unity.purchasing",
             "expression": "",
             "define": "PANCAKE_IAP"
+        },
+        {
+            "name": "com.pancake.adjust",
+            "expression": "",
+            "define": "PANCAKE_ADJUST"
         }
     ],
     "noEngineReferences": false
