--- a/Editor/Pancake.Editor.asmdef
+++ b/Editor/Pancake.Editor.asmdef
@@ -4,6 +4,7 @@
     "references": [
         "GUID:a824ce4dde854994ab15209834381e6f",
         "GUID:087e107ac31b88743919d55b204ac023",
+        "GUID:cbb42e4cfd9484f52972c8f05e1c3252",
         "GUID:adac8d59ad7e8504f82d387cded797a7",
         "GUID:1fc40a42fd9ba86428b9f1a1bc03d8a6",
         "GUID:38036840b8620d443a0acf3e48f20d6f",
