--- a/Modules/IAP/Pancake.Purchase.asmdef
+++ b/Modules/IAP/Pancake.Purchase.asmdef
@@ -10,6 +10,7 @@
         "GUID:fe25561d224ed4743af4c60938a59d0b",
         "GUID:70ea675efa2644cef98c7ece24158333",
         "GUID:adac8d59ad7e8504f82d387cded797a7",
+        "GUID:b0a110e2f808b4d4d82f5694f91b251a",
         "GUID:8e70255c04255d843b6e8ed58abeaeda"
     ],
     "includePlatforms": [],
