--- a/Modules/IAP/Pancake.Purchase.asmdef
+++ b/Modules/IAP/Pancake.Purchase.asmdef
@@ -9,6 +9,7 @@
         "GUID:08d1c582746949b40ba6a45cdb776bdf",
         "GUID:fe25561d224ed4743af4c60938a59d0b",
         "GUID:70ea675efa2644cef98c7ece24158333",
+        "GUID:341d04dbc3e6ced4f903de04a0918a48",
         "GUID:adac8d59ad7e8504f82d387cded797a7",
         "GUID:b0a110e2f808b4d4d82f5694f91b251a",
         "GUID:8e70255c04255d843b6e8ed58abeaeda"
