--- a/Modules/Advertising/Pancake.Monetization.asmdef
+++ b/Modules/Advertising/Pancake.Monetization.asmdef
@@ -5,6 +5,7 @@
         "GUID:341d04dbc3e6ced4f903de04a0918a48",
         "GUID:adac8d59ad7e8504f82d387cded797a7",
         "GUID:b0a110e2f808b4d4d82f5694f91b251a",
+        "GUID:f7dabdcbede30aa4d84803a163c2fa1b",
         "GUID:a4cfc1a18fa3a469b96d885db522f42e"
     ],
     "includePlatforms": [],
