--- a/Core/Editor/Pancake.Editor.asmdef
+++ b/Core/Editor/Pancake.Editor.asmdef
@@ -8,6 +8,7 @@
         "GUID:38036840b8620d443a0acf3e48f20d6f",
         "GUID:10507a3c16a6d88428b6e2a636fb7438",
         "GUID:f7dabdcbede30aa4d84803a163c2fa1b",
+        "GUID:d54e067e22b30d84d974d345601e49b6",
         "GUID:87eaf3fd1840b5c42a5f00c0a45ccaa1",
         "GUID:5a5bdc0387f898e429d96457c503426a"
     ],
