--- a/Modules/UGUI/Pancake.UGUI.asmdef
+++ b/Modules/UGUI/Pancake.UGUI.asmdef
@@ -6,7 +6,8 @@
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
         "GUID:adac8d59ad7e8504f82d387cded797a7",
         "GUID:10507a3c16a6d88428b6e2a636fb7438",
-        "GUID:663c42ebcf40ab347b24d56f39e89dc6"
+        "GUID:663c42ebcf40ab347b24d56f39e89dc6",
+        "GUID:b0a110e2f808b4d4d82f5694f91b251a"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
