--- a/Modules/Sound/Pancake.Sound.asmdef
+++ b/Modules/Sound/Pancake.Sound.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "GUID:adac8d59ad7e8504f82d387cded797a7",
         "GUID:10507a3c16a6d88428b6e2a636fb7438",
-        "GUID:b0a110e2f808b4d4d82f5694f91b251a"
+        "GUID:b0a110e2f808b4d4d82f5694f91b251a",
+        "GUID:87eaf3fd1840b5c42a5f00c0a45ccaa1"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
