--- a/Core/Editor/Pancake.Editor.asmdef
+++ b/Core/Editor/Pancake.Editor.asmdef
@@ -11,7 +11,9 @@
         "GUID:d54e067e22b30d84d974d345601e49b6",
         "GUID:71a2e5fd62742b447a45a06bf18f9a7d",
         "GUID:87eaf3fd1840b5c42a5f00c0a45ccaa1",
-        "GUID:5a5bdc0387f898e429d96457c503426a"
+        "GUID:5a5bdc0387f898e429d96457c503426a",
+        "GUID:3c583a70120640c4bb70c2b72365e742",
+        "GUID:341d04dbc3e6ced4f903de04a0918a48"
     ],
     "includePlatforms": [
         "Editor"
