--- a/Modules/Notification/Pancake.Notification.asmdef
+++ b/Modules/Notification/Pancake.Notification.asmdef
@@ -6,7 +6,8 @@
         "GUID:1e8e55397bd004beaba78a667566665f",
         "GUID:341d04dbc3e6ced4f903de04a0918a48",
         "GUID:adac8d59ad7e8504f82d387cded797a7",
-        "GUID:b0a110e2f808b4d4d82f5694f91b251a"
+        "GUID:b0a110e2f808b4d4d82f5694f91b251a",
+        "GUID:663c42ebcf40ab347b24d56f39e89dc6"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
