--- a/Core/Editor/Pancake.Editor.asmdef
+++ b/Core/Editor/Pancake.Editor.asmdef
@@ -6,12 +6,14 @@
         "GUID:adac8d59ad7e8504f82d387cded797a7",
         "GUID:1fc40a42fd9ba86428b9f1a1bc03d8a6",
         "GUID:38036840b8620d443a0acf3e48f20d6f",
+        "GUID:efdee36e63e4ce34a91071531ec746c1",
         "GUID:10507a3c16a6d88428b6e2a636fb7438",
         "GUID:f7dabdcbede30aa4d84803a163c2fa1b",
         "GUID:d54e067e22b30d84d974d345601e49b6",
         "GUID:71a2e5fd62742b447a45a06bf18f9a7d",
         "GUID:87eaf3fd1840b5c42a5f00c0a45ccaa1",
         "GUID:5a5bdc0387f898e429d96457c503426a",
+        "GUID:8a8c4467ea7eb924ea8771a941f6408b",
         "GUID:3c583a70120640c4bb70c2b72365e742",
         "GUID:341d04dbc3e6ced4f903de04a0918a48"
     ],
