--- a/Core/Editor/Pancake.Editor.asmdef
+++ b/Core/Editor/Pancake.Editor.asmdef
@@ -29,7 +29,7 @@
     "versionDefines": [
         {
             "name": "com.unity.purchasing",
-            "expression": "",
+            "expression": "4.5.2",
             "define": "PANCAKE_IAP"
         },
         {
