--- a/Modules/Sound/Pancake.Sound.asmdef
+++ b/Modules/Sound/Pancake.Sound.asmdef
@@ -2,6 +2,7 @@
     "name": "Pancake.Sound",
     "rootNamespace": "",
     "references": [
+        "GUID:341d04dbc3e6ced4f903de04a0918a48",
         "GUID:adac8d59ad7e8504f82d387cded797a7",
         "GUID:10507a3c16a6d88428b6e2a636fb7438",
         "GUID:b0a110e2f808b4d4d82f5694f91b251a",
