--- a/Modules/UGUI/Pancake.UGUI.asmdef
+++ b/Modules/UGUI/Pancake.UGUI.asmdef
@@ -8,7 +8,8 @@
         "GUID:efdee36e63e4ce34a91071531ec746c1",
         "GUID:10507a3c16a6d88428b6e2a636fb7438",
         "GUID:663c42ebcf40ab347b24d56f39e89dc6",
-        "GUID:b0a110e2f808b4d4d82f5694f91b251a"
+        "GUID:b0a110e2f808b4d4d82f5694f91b251a",
+        "GUID:f4bbbe38ed06eef458a5b3516216a659"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
