--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.burst": "1.8.4",
     "com.unity.collections": "2.1.4",
-    "com.unity.textmeshpro": "3.0.6"
+    "com.unity.textmeshpro": "3.0.6",
+    "com.unity.logging": "1.0.11"
   },
   "repository": {
     "type": "git",
