--- a/Modules/NewtonsoftUnityConverter/Pancake.Newtonsoft.Converter.asmdef
+++ b/Modules/NewtonsoftUnityConverter/Pancake.Newtonsoft.Converter.asmdef
@@ -1,7 +1,9 @@
 {
     "name": "Pancake.Newtonsoft.Converter",
     "rootNamespace": "",
-    "references": [],
+    "references": [
+        "GUID:9e24947de15b9834991c9d8411ea37cf"
+    ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
