--- a/Modules/UniTask/Pancake.UniTask.asmdef
+++ b/Modules/UniTask/Pancake.UniTask.asmdef
@@ -1,7 +1,10 @@
 {
     "name": "Pancake.UniTask",
     "rootNamespace": "",
-    "references": [],
+    "references": [
+        "GUID:6055be8ebefd69e48b49212b09b47b2f",
+        "GUID:9e24947de15b9834991c9d8411ea37cf"
+    ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
@@ -9,6 +12,42 @@
     "precompiledReferences": [],
     "autoReferenced": true,
     "defineConstraints": [],
-    "versionDefines": [],
+    "versionDefines": [
+        {
+            "name": "com.unity.textmeshpro",
+            "expression": "",
+            "define": "PANCAKE_TMP"
+        },
+        {
+            "name": "com.unity.addressables",
+            "expression": "",
+            "define": "PANCAKE_ADDRESSABLES"
+        },
+        {
+            "name": "com.unity.ugui",
+            "expression": "",
+            "define": "PANCAKE_UGUI"
+        },
+        {
+            "name": "com.unity.modules.assetbundle",
+            "expression": "",
+            "define": "PANCAKE_ASSETBUNDLE"
+        },
+        {
+            "name": "com.unity.modules.unitywebrequest",
+            "expression": "",
+            "define": "PANCAKE_WEBREQUEST"
+        },
+        {
+            "name": "com.unity.modules.physics",
+            "expression": "",
+            "define": "PANCAKE_PHYSICS"
+        },
+        {
+            "name": "com.unity.modules.physics2d",
+            "expression": "",
+            "define": "PANCAKE_PHYSICS2D"
+        }
+    ],
     "noEngineReferences": false
 }
