--- a/Core/Editor/Pancake.Editor.asmdef
+++ b/Core/Editor/Pancake.Editor.asmdef
@@ -3,6 +3,7 @@
     "rootNamespace": "",
     "references": [
         "GUID:a824ce4dde854994ab15209834381e6f",
+        "GUID:69448af7b92c7f342b298e06a37122aa",
         "GUID:adac8d59ad7e8504f82d387cded797a7",
         "GUID:1fc40a42fd9ba86428b9f1a1bc03d8a6",
         "GUID:38036840b8620d443a0acf3e48f20d6f",
@@ -102,6 +103,16 @@
             "name": "com.unity.mobile.notifications",
             "expression": "2.1.0",
             "define": "PANCAKE_NOTIFICATION"
+        },
+        {
+            "name": "com.pancake.play-asset-delivery",
+            "expression": "1.0.0",
+            "define": "PANCAKE_PLAY_ASSET_DELIVERY"
+        },
+        {
+            "name": "com.unity.addressables",
+            "expression": "",
+            "define": "PANCAKE_ADDRESSABLE"
         }
     ],
     "noEngineReferences": false
