--- a/Modules/IAP/Editor/Pancake.Purchase.Editor.asmdef
+++ b/Modules/IAP/Editor/Pancake.Purchase.Editor.asmdef
@@ -1,20 +1,28 @@
 {
-  "name": "Pancake.Purchase.Editor",
-  "rootNamespace": "",
-  "references": [
-    "GUID:60bfecf5cb232594891bc622f40d6bed",
-    "GUID:1fc40a42fd9ba86428b9f1a1bc03d8a6",
-    "GUID:87eaf3fd1840b5c42a5f00c0a45ccaa1"
-  ],
-  "includePlatforms": [
-    "Editor"
-  ],
-  "excludePlatforms": [],
-  "allowUnsafeCode": false,
-  "overrideReferences": false,
-  "precompiledReferences": [],
-  "autoReferenced": true,
-  "defineConstraints": [],
-  "versionDefines": [],
-  "noEngineReferences": false
+    "name": "Pancake.Purchase.Editor",
+    "rootNamespace": "",
+    "references": [
+        "GUID:60bfecf5cb232594891bc622f40d6bed",
+        "GUID:1fc40a42fd9ba86428b9f1a1bc03d8a6",
+        "GUID:87eaf3fd1840b5c42a5f00c0a45ccaa1"
+    ],
+    "includePlatforms": [
+        "Editor"
+    ],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [
+        "PANCAKE_IAP"
+    ],
+    "versionDefines": [
+        {
+            "name": "com.unity.purchasing",
+            "expression": "4.5.2",
+            "define": "PANCAKE_IAP"
+        }
+    ],
+    "noEngineReferences": false
 }
