-update: property drawer inside collection

--- a/Modules/Scriptable/Editor/Pancake.Scriptable.Editor.asmdef
+++ b/Modules/Scriptable/Editor/Pancake.Scriptable.Editor.asmdef
@@ -2,6 +2,7 @@
     "name": "Pancake.Scriptable.Editor",
     "rootNamespace": "",
     "references": [
+        "GUID:341d04dbc3e6ced4f903de04a0918a48",
         "GUID:adac8d59ad7e8504f82d387cded797a7",
         "GUID:87eaf3fd1840b5c42a5f00c0a45ccaa1",
         "GUID:b0a110e2f808b4d4d82f5694f91b251a"
