--- a/Modules/RemoteConfig/Pancake.RemoteConfig.asmdef
+++ b/Modules/RemoteConfig/Pancake.RemoteConfig.asmdef
@@ -1,31 +1,29 @@
 {
-  "name": "Pancake.RemoteConfig",
-  "rootNamespace": "",
-  "references": [
-    "GUID:341d04dbc3e6ced4f903de04a0918a48",
-    "GUID:adac8d59ad7e8504f82d387cded797a7",
-    "GUID:b0a110e2f808b4d4d82f5694f91b251a",
-    "GUID:5ff773a9eeefa25418cee624c90cb077"
-  ],
-  "includePlatforms": [],
-  "excludePlatforms": [],
-  "allowUnsafeCode": false,
-  "overrideReferences": true,
-  "precompiledReferences": [
-    "Firebase.App.dll",
-    "Firebase.RemoteConfig.dll",
-    "Firebase.TaskExtension.dll"
-  ],
-  "autoReferenced": true,
-  "defineConstraints": [
-    "PANCAKE_REMOTE_CONFIG"
-  ],
-  "versionDefines": [
-    {
-      "name": "com.google.firebase.remote-config",
-      "expression": "",
-      "define": "PANCAKE_REMOTE_CONFIG"
-    }
-  ],
-  "noEngineReferences": false
+    "name": "Pancake.RemoteConfig",
+    "rootNamespace": "",
+    "references": [
+        "GUID:341d04dbc3e6ced4f903de04a0918a48",
+        "GUID:adac8d59ad7e8504f82d387cded797a7",
+        "GUID:b0a110e2f808b4d4d82f5694f91b251a",
+        "GUID:5ff773a9eeefa25418cee624c90cb077"
+    ],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": true,
+    "precompiledReferences": [
+        "Firebase.App.dll",
+        "Firebase.RemoteConfig.dll",
+        "Firebase.TaskExtension.dll"
+    ],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [
+        {
+            "name": "com.google.firebase.remote-config",
+            "expression": "",
+            "define": "PANCAKE_REMOTE_CONFIG"
+        }
+    ],
+    "noEngineReferences": false
 }
