--- a/Core/Editor/Pancake.Editor.asmdef
+++ b/Core/Editor/Pancake.Editor.asmdef
@@ -15,9 +15,12 @@
         "GUID:87eaf3fd1840b5c42a5f00c0a45ccaa1",
         "GUID:5a5bdc0387f898e429d96457c503426a",
         "GUID:8a8c4467ea7eb924ea8771a941f6408b",
+        "GUID:a7eb6344f390c06479cd94507dbcbf5e",
         "GUID:3c583a70120640c4bb70c2b72365e742",
         "GUID:341d04dbc3e6ced4f903de04a0918a48",
-        "GUID:6fba570e0f7342c49b5d15e1ef8f6408"
+        "GUID:6fba570e0f7342c49b5d15e1ef8f6408",
+        "GUID:68765d262e2128e4ab49c983f3411946",
+        "GUID:72d1fea872bd7a449bf3818f2b0a6708"
     ],
     "includePlatforms": [
         "Editor"
@@ -113,6 +116,11 @@
             "name": "com.unity.addressables",
             "expression": "",
             "define": "PANCAKE_ADDRESSABLE"
+        },
+        {
+            "name": "com.esotericsoftware.spine.spine-unity",
+            "expression": "",
+            "define": "PANCAKE_SPINE"
         }
     ],
     "noEngineReferences": false
