--- a/Core/Editor/Pancake.Editor.asmdef
+++ b/Core/Editor/Pancake.Editor.asmdef
@@ -20,7 +20,8 @@
         "GUID:341d04dbc3e6ced4f903de04a0918a48",
         "GUID:6fba570e0f7342c49b5d15e1ef8f6408",
         "GUID:68765d262e2128e4ab49c983f3411946",
-        "GUID:72d1fea872bd7a449bf3818f2b0a6708"
+        "GUID:72d1fea872bd7a449bf3818f2b0a6708",
+        "GUID:173464ddf4cdb6640a4dfa8a9281ad69"
     ],
     "includePlatforms": [
         "Editor"
