--- a/Core/Runtime/Pancake.asmdef
+++ b/Core/Runtime/Pancake.asmdef
@@ -2,7 +2,8 @@
     "name": "Pancake",
     "rootNamespace": "",
     "references": [
-        "GUID:341d04dbc3e6ced4f903de04a0918a48"
+        "GUID:341d04dbc3e6ced4f903de04a0918a48",
+        "GUID:b0a110e2f808b4d4d82f5694f91b251a"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
