--- a/Modules/LevelSystem/Runtime/Pancake.LevelSystem.asmdef
+++ b/Modules/LevelSystem/Runtime/Pancake.LevelSystem.asmdef
@@ -17,6 +17,12 @@
     "precompiledReferences": [],
     "autoReferenced": true,
     "defineConstraints": [],
-    "versionDefines": [],
+    "versionDefines": [
+        {
+            "name": "com.unity.addressables",
+            "expression": "",
+            "define": "PANCAKE_ADDRESSABLE"
+        }
+    ],
     "noEngineReferences": false
 }
