-add: simple tracking for UIButton

--- a/Modules/UGUI/Pancake.UGUI.asmdef
+++ b/Modules/UGUI/Pancake.UGUI.asmdef
@@ -9,6 +9,7 @@
         "GUID:663c42ebcf40ab347b24d56f39e89dc6",
         "GUID:b0a110e2f808b4d4d82f5694f91b251a",
         "GUID:f4bbbe38ed06eef458a5b3516216a659",
+        "GUID:f7dabdcbede30aa4d84803a163c2fa1b",
         "GUID:80ecb87cae9c44d19824e70ea7229748"
     ],
     "includePlatforms": [],
