--- a/Modules/UGUI/Editor/Pancake.UGUI.Editor.asmdef
+++ b/Modules/UGUI/Editor/Pancake.UGUI.Editor.asmdef
@@ -7,7 +7,8 @@
         "GUID:f4bbbe38ed06eef458a5b3516216a659",
         "GUID:87eaf3fd1840b5c42a5f00c0a45ccaa1",
         "GUID:b0a110e2f808b4d4d82f5694f91b251a",
-        "GUID:5a5bdc0387f898e429d96457c503426a"
+        "GUID:5a5bdc0387f898e429d96457c503426a",
+        "GUID:f7dabdcbede30aa4d84803a163c2fa1b"
     ],
     "includePlatforms": [
         "Editor"
