--- a/Modules/UGUI/Pancake.UGUI.asmdef
+++ b/Modules/UGUI/Pancake.UGUI.asmdef
@@ -6,6 +6,7 @@
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
         "GUID:adac8d59ad7e8504f82d387cded797a7",
         "GUID:efdee36e63e4ce34a91071531ec746c1",
+        "GUID:d54e067e22b30d84d974d345601e49b6",
         "GUID:663c42ebcf40ab347b24d56f39e89dc6",
         "GUID:b0a110e2f808b4d4d82f5694f91b251a",
         "GUID:f4bbbe38ed06eef458a5b3516216a659",
