--- a/Assets/Heart/Modules/Component/Runtime/Pancake.Component.asmdef
+++ b/Assets/Heart/Modules/Component/Runtime/Pancake.Component.asmdef
@@ -6,7 +6,8 @@
         "GUID:b0a110e2f808b4d4d82f5694f91b251a",
         "GUID:341d04dbc3e6ced4f903de04a0918a48",
         "GUID:80ecb87cae9c44d19824e70ea7229748",
-        "GUID:f4bbbe38ed06eef458a5b3516216a659"
+        "GUID:f4bbbe38ed06eef458a5b3516216a659",
+        "GUID:5ff773a9eeefa25418cee624c90cb077"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
