--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -14,8 +14,6 @@
     "com.unity.mobile.notifications": "2.2.2",
     "com.unity.nuget.newtonsoft-json": "3.2.1",
     "com.unity.purchasing": "4.10.0",
-    "com.unity.services.cloudsave": "3.0.0",
-    "com.unity.services.leaderboards": "1.0.0",
     "com.unity.sharp-zip-lib": "1.3.4-preview",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.ugui": "1.0.0",
@@ -49,6 +47,7 @@
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
-    "com.unity.modules.xr": "1.0.0"
+    "com.unity.modules.xr": "1.0.0",
+    "com.unity.services.leaderboards": "1.0.0"
   }
 }
