--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -6,7 +6,7 @@
     "com.esotericsoftware.spine.spine-unity": "https://github.com/EsotericSoftware/spine-runtimes.git?path=spine-unity/Assets/Spine#4.1",
     "com.google.external-dependency-manager": "https://github.com/google-unity/external-dependency-manager.git#1.2.177",
     "com.unity.2d.sprite": "1.0.0",
-    "com.unity.addressables": "1.21.18",
+    "com.unity.addressables": "1.21.19",
     "com.unity.burst": "1.8.9",
     "com.unity.collections": "2.1.4",
     "com.unity.ide.rider": "3.0.26",
@@ -14,6 +14,7 @@
     "com.unity.mobile.notifications": "2.2.2",
     "com.unity.nuget.newtonsoft-json": "3.2.1",
     "com.unity.purchasing": "4.10.0",
+    "com.unity.services.leaderboards": "2.0.0",
     "com.unity.sharp-zip-lib": "1.3.4-preview",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.ugui": "1.0.0",
@@ -47,7 +48,6 @@
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
-    "com.unity.modules.xr": "1.0.0",
-    "com.unity.services.leaderboards": "1.0.0"
+    "com.unity.modules.xr": "1.0.0"
   }
 }
