--- a/Assets/Heart/Modules/Localization/Runtime/Pancake.Localization.asmdef
+++ b/Assets/Heart/Modules/Localization/Runtime/Pancake.Localization.asmdef
@@ -1,3 +1,16 @@
 {
-	"name": "Pancake.Localization"
+    "name": "Pancake.Localization",
+    "rootNamespace": "",
+    "references": [
+        "GUID:efdee36e63e4ce34a91071531ec746c1"
+    ],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
