--- a/Assets/Heart/Modules/Localization/Runtime/Pancake.Localization.asmdef
+++ b/Assets/Heart/Modules/Localization/Runtime/Pancake.Localization.asmdef
@@ -2,7 +2,9 @@
     "name": "Pancake.Localization",
     "rootNamespace": "",
     "references": [
-        "GUID:efdee36e63e4ce34a91071531ec746c1"
+        "GUID:efdee36e63e4ce34a91071531ec746c1",
+        "GUID:adac8d59ad7e8504f82d387cded797a7",
+        "GUID:6055be8ebefd69e48b49212b09b47b2f"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
